# Projekt-SO

./: CMakeLists.txt  Makefile
include/: resources.h
src/: fan.c  kibic.c  kierownik_stadionu.c  pracownik_techniczny.c  resources.c  technical_worker.c
